<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_explore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_saved"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/action_saved"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_travels"
        android:enabled="true"
        android:icon="@drawable/ic_airplanemode_active_black_24dp"
        android:title="@string/action_travels"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messages"
        android:enabled="true"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/action_messages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom" />

</menu>