<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="fragment.SavedFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/saved_tag"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/saved_desc"
        android:textSize="18sp" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/check_availability_button_background"
        android:text="@string/start_exploring_label"
        android:textColor="@android:color/white" />


</LinearLayout>
