<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_select_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            tools:context="mx.lumbrera.airbnb.activity.SelectDateActivity">

            <!-- Adults container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/label_adults"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_less"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/less_adults"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:id="@+id/adults_number"/>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_more"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/more_adults"/>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/white" />

            <!-- Kids container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/label_kids"
                            android:textColor="@android:color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/label_kids_sub"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_less"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/less_kids"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:id="@+id/kids_number"/>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_more"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/more_kids"/>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/white" />

            <!-- Babys container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/label_babys"
                            android:textColor="@android:color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/label_babys_sub"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10sp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_less"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/less_babies"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:id="@+id/babies_number"/>

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/rounded_button_background"
                        android:text="@string/button_more"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:id="@+id/more_babies"/>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/white" />

            <!-- Pets container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/label_pets"
                        android:textColor="@android:color/white"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_pets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/pet_switch_style"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>