<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:id="@+id/main.backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <Button
                    android:id="@+id/button_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/main_buttons_background"
                    android:drawableLeft="@drawable/ic_earth_white_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_earth_white_24dp"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/button_anywhere" />

                <Button
                    android:id="@+id/button_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/main_buttons_background"
                    android:drawableLeft="@drawable/ic_calendar_blank_white_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_calendar_blank_white_24dp"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/button_anytime" />

                <Button
                    android:id="@+id/button_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/main_buttons_background"
                    android:drawableLeft="@drawable/ic_account_multiple_white_24dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_account_multiple_white_24dp"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/button_1_people_base" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/button_bg"
                    app:tabIndicatorColor="@android:color/white" />


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="invisible"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>
